# PODTherm-GP

./: C.csv  Floorplan_AI_5x4.txt  Floorplan_AMD.txt  G.csv  Model_Training.sh  POD_Para.xml  POD_Para_AI_CHIP.xml  P_mat.csv  Post_Processing.py  Prediction_Model.sh  README.md  eigenvals.csv  powertrace_AMD_240.txt  powertrace_AMD_240_pre.txt
Calculate_A/: CMakeLists.txt
Calculate_A/src/: POD_Para.h  Space.h  Space.ufl  decompressor.hpp  helpers.cpp  main.cpp
Calculate_C/: CMakeLists.txt
Calculate_C/src/: Space.h  Space.ufl  load_bin.hpp  main.cpp
Calculate_G/: CMakeLists.txt
Calculate_G/src/: Matrix.cpp  Matrix.hpp  Space.h  Space.ufl  boundary.hpp  main.cpp
Calculate_P/: CMakeLists.txt
Calculate_P/src/: Space.h  Space.ufl  calculate_P_Matrix  expressions.hpp  main.cpp  old_broke_main.cpp  write_bin.hpp
Data_Collection_FEM/: CMakeLists.txt
Data_Collection_FEM/src/: Space.h  Space.ufl  helpers.hpp  main.cpp
Eigensolver/: CMakeLists.txt
Eigensolver/src/: main.cpp
Get_POD_Modes_FEniCS/: CMakeLists.txt
Get_POD_Modes_FEniCS/src/: boundary.hpp  decompressor.hpp  expressions.hpp
ODE_SOLVER/: CMakeLists.txt  petsc_toolchain.cmake
ODE_SOLVER/src/: Matrix.hpp  POD_ODE_Solver.cpp  POD_ODE_Solver.hpp  main.cpp
ODE_Solver_CU/: CMakeLists.txt
ODE_Solver_CU/src/: POD_ODE_Solver.cpp  POD_ODE_Solver.hpp  main.cpp
pod_result/: CU1.txt  CU10.txt  CU2.txt  CU3.txt  CU4.txt  CU5.txt  CU6.txt  CU7.txt  CU8.txt  CU9.txt  LS_error.txt  T_X_10_mode.txt  T_X_1_mode.txt  T_X_2_mode.txt  T_X_3_mode.txt  T_X_4_mode.txt  T_X_5_mode.txt  T_X_6_mode.txt  T_X_7_mode.txt  T_X_8_mode.txt  T_X_9_mode.txt  T_Y_10_mode.txt  T_Y_1_mode.txt  T_Y_2_mode.txt  T_Y_3_mode.txt  T_Y_4_mode.txt  T_Y_5_mode.txt  T_Y_6_mode.txt  T_Y_7_mode.txt  T_Y_8_mode.txt  T_Y_9_mode.txt  x_block.txt  y_block.txt
